MovementListener.java