@@ -9,7 +9,9 @@ import org.bukkit.Material;
 import org.bukkit.block.Block;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
+import org.bukkit.event.EventPriority;
 import org.bukkit.event.Listener;
+import org.bukkit.event.entity.EntityDamageEvent;
 import org.bukkit.event.player.PlayerMoveEvent;
 import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
@@ -28,6 +30,7 @@ public class MovementListener implements Listener {
         if (e.getTo() == null) return;
         Player p = e.getPlayer();
 
+        // игнор телепорты/микро-движения
         if (e.getFrom().distanceSquared(e.getTo()) < 1e-6) return;
 
         DataManager.PlayerData pd = data.get(p);
@@ -39,44 +42,116 @@ public class MovementListener implements Listener {
         double horizontal = Math.hypot(dx, dz);
         boolean onGround = p.isOnGround();
 
+        // Air ticks
         if (!onGround && !p.isFlying() && !p.isGliding()) pd.airTicks++;
         else pd.airTicks = 0;
 
-        checkSpeedA(p, pd, horizontal, onGround);
-        checkFlyA(p, pd, dy, onGround);
+        // NoFall: накапливаем высоту падения (только если реально падаем)
+        if (dy < 0 && !isInLiquid(p) && !p.hasPotionEffect(PotionEffectType.SLOW_FALLING)) {
+            pd.fallDistance += -dy;
+        }
+        // Приземление: ожидать урон (если падение было большим и не на исключениях)
+        if (!pd.lastOnGround && onGround) {
+            if (pd.fallDistance >= plugin.getConfig().getDouble("checks.NoFallA.min-fall", 3.0)
+                    && !isLandingExempt(p)) {
+                pd.awaitingFallDamage = true;
+                pd.landAtMs = System.currentTimeMillis();
+            }
+            pd.fallDistance = 0.0; // сброс при касании земли
+        }
 
+        // Checks
+        checkSpeedA(p, pd, horizontal, onGround);
+        updateSpeedWindow(p, pd, horizontal, onGround, p.isSprinting());
+        checkSpeedB(p, pd);
+        checkFlyA(p, pd, dy, onGround);
+        checkNoFallA(p, pd);
+        checkJesusA(p, pd, horizontal);
+
+        // save state
         pd.lastDeltaY = dy;
         pd.lastOnGround = onGround;
         pd.lastLoc = to;
     }
 
     private void checkSpeedA(Player p, DataManager.PlayerData pd, double horiz, boolean onGround) {
-        if (!onGround) { pd.speedStreak = Math.max(0, pd.speedStreak - 1); return; }
         if (isExempt(p) || pd.hadRecentVelocity(1200)) { pd.speedStreak = 0; return; }
 
-        double walk = plugin.getConfig().getDouble("checks.SpeedA.ground-walk", 0.215);
-        double sprint = plugin.getConfig().getDouble("checks.SpeedA.ground-sprint", 0.36);
+        double walkG = plugin.getConfig().getDouble("checks.SpeedA.ground-walk", 0.215);
+        double sprintG = plugin.getConfig().getDouble("checks.SpeedA.ground-sprint", 0.36);
+        double walkA = plugin.getConfig().getDouble("checks.SpeedA.air-walk", 0.30);
+        double sprintA = plugin.getConfig().getDouble("checks.SpeedA.air-sprint", 0.42);
         double effPer = plugin.getConfig().getDouble("checks.SpeedA.speed-effect-per-level", 0.06);
-        double margin = plugin.getConfig().getDouble("checks.SpeedA.horizontal-margin", 0.05);
-        int streakToFlag = plugin.getConfig().getInt("checks.SpeedA.streak-to-flag", 3);
-        double addVl = plugin.getConfig().getDouble("checks.SpeedA.add-vl", 1.0);
+        double margin = plugin.getConfig().getDouble("checks.SpeedA.horizontal-margin", 0.03);
+        int streakToFlag = plugin.getConfig().getInt("checks.SpeedA.streak-to-flag", 2);
+        double addVl = plugin.getConfig().getDouble("checks.SpeedA.add-vl", 1.5);
 
         boolean sprinting = p.isSprinting();
-        double allowed = sprinting ? sprint : walk;
+        double allowed = onGround ? (sprinting ? sprintG : walkG) : (sprinting ? sprintA : walkA);
 
-        int amp = 0;
         PotionEffect eff = p.getPotionEffect(PotionEffectType.SPEED);
-        if (eff != null) amp = eff.getAmplifier() + 1;
-        allowed += effPer * amp;
+        if (eff != null) allowed += effPer * (eff.getAmplifier() + 1);
 
         if (horiz > (allowed + margin)) {
             if (++pd.speedStreak >= streakToFlag) {
-                vl.add(p.getUniqueId(), "SpeedA", addVl,
-                        p.getName() + " moved " + String.format("%.3f", horiz) + " > " + String.format("%.3f", allowed));
+                flag(p, "SpeedA", addVl,
+                        "h=%.3f > %.3f onGround=%s sprint=%s".formatted(horiz, allowed, onGround, sprinting));
                 pd.speedStreak = streakToFlag;
             }
         } else {
             pd.speedStreak = Math.max(0, pd.speedStreak - 1);
+        }
+    }
+
+    private void updateSpeedWindow(Player p, DataManager.PlayerData pd, double h, boolean onGround, boolean sprinting) {
+        long now = System.currentTimeMillis();
+        pd.speedWin.addLast(new DataManager.PlayerData.Sample(now, h, onGround, sprinting));
+        long window = plugin.getConfig().getLong("checks.SpeedB.window-ms", 900);
+        while (!pd.speedWin.isEmpty() && (now - pd.speedWin.getFirst().t) > window) {
+            pd.speedWin.removeFirst();
+        }
+    }
+
+    private void checkSpeedB(Player p, DataManager.PlayerData pd) {
+        if (isExempt(p) || pd.hadRecentVelocity(1200)) { pd.speedBStreak = 0; return; }
+        if (pd.speedWin.size() < 5) return;
+
+        long now = System.currentTimeMillis();
+        long oldest = pd.speedWin.getFirst().t;
+        double secs = Math.max(0.2, (now - oldest) / 1000.0);
+
+        double sumH = 0.0;
+        int air = 0, total = 0, sprintTicks = 0;
+        for (var s : pd.speedWin) {
+            sumH += s.h; total++;
+            if (!s.onGround) air++;
+            if (s.sprinting) sprintTicks++;
+        }
+        double bps = sumH / secs;
+
+        double walkBps = plugin.getConfig().getDouble("checks.SpeedB.walk-bps", 4.4);
+        double sprintBps = plugin.getConfig().getDouble("checks.SpeedB.sprint-bps", 5.9);
+        double jumpBps = plugin.getConfig().getDouble("checks.SpeedB.jump-bps", 7.2);
+        double marginBps = plugin.getConfig().getDouble("checks.SpeedB.margin-bps", 0.25);
+        int streakToFlag = plugin.getConfig().getInt("checks.SpeedB.streak-to-flag", 2);
+        double addVl = plugin.getConfig().getDouble("checks.SpeedB.add-vl", 1.5);
+
+        double airRatio = (total == 0) ? 0.0 : (air / (double) total);
+        boolean mostlySprint = sprintTicks > total / 2;
+        double allowedBps = (airRatio > 0.3) ? jumpBps : (mostlySprint ? sprintBps : walkBps);
+
+        // эффект скорости как множитель (~+20%/ур)
+        var speed = p.getPotionEffect(PotionEffectType.SPEED);
+        if (speed != null) allowedBps *= (1.0 + 0.2 * (speed.getAmplifier() + 1));
+
+        if (bps > (allowedBps + marginBps)) {
+            if (++pd.speedBStreak >= streakToFlag) {
+                flag(p, "SpeedB", addVl,
+                        "bps=%.2f>%.2f air=%.0f%%".formatted(bps, allowedBps, airRatio * 100));
+                pd.speedBStreak = streakToFlag;
+            }
+        } else {
+            pd.speedBStreak = Math.max(0, pd.speedBStreak - 1);
         }
     }
 
@@ -93,8 +168,7 @@ public class MovementListener implements Listener {
 
             if (pd.airTicks > maxAir || hovering) {
                 if (++pd.flyStreak >= streakToFlag) {
-                    vl.add(p.getUniqueId(), "FlyA", addVl,
-                            p.getName() + " airTicks=" + pd.airTicks + " hover=" + hovering);
+                    flag(p, "FlyA", addVl, "airTicks=%d hover=%s".formatted(pd.airTicks, hovering));
                     pd.flyStreak = streakToFlag;
                 }
             } else {
@@ -103,6 +177,65 @@ public class MovementListener implements Listener {
         } else {
             pd.flyStreak = Math.max(0, pd.flyStreak - 1);
         }
+    }
+
+    private void checkNoFallA(Player p, DataManager.PlayerData pd) {
+        if (!pd.awaitingFallDamage) return;
+
+        long grace = plugin.getConfig().getLong("checks.NoFallA.grace-ms", 450);
+        if ((System.currentTimeMillis() - pd.landAtMs) < grace) return;
+
+        // если за время «grace» урона не было, и нет исключений — флаг
+        if (!isLandingExempt(p)) {
+            int streakToFlag = plugin.getConfig().getInt("checks.NoFallA.streak-to-flag", 2);
+            double addVl = plugin.getConfig().getDouble("checks.NoFallA.add-vl", 2.0);
+
+            // накапливаем «серии» через повторные приземления без урона
+            // для простоты — одно приземление = один инкремент
+            flag(p, "NoFallA", addVl, "no fall dmg after landing");
+        }
+
+        pd.awaitingFallDamage = false; // сброс
+    }
+
+    @EventHandler(priority = EventPriority.MONITOR, ignoreCancelled = true)
+    public void onDamage(EntityDamageEvent e) {
+        if (!(e.getEntity() instanceof Player p)) return;
+        DataManager.PlayerData pd = data.get(p);
+
+        if (e.getCause() == EntityDamageEvent.DamageCause.FALL) {
+            // получили реальный урон от падения — это норм, снимаем ожидание
+            pd.awaitingFallDamage = false;
+            pd.fallDistance = 0.0;
+        }
+    }
+
+    private void checkJesusA(Player p, DataManager.PlayerData pd, double horiz) {
+        if (!isInLiquid(p)) return;
+        if (p.hasPotionEffect(PotionEffectType.DOLPHINS_GRACE)) return; // легальная быстрая плавучесть
+
+        double swimMax = plugin.getConfig().getDouble("checks.JesusA.swim-max-h", 0.30);
+        double surfaceMax = plugin.getConfig().getDouble("checks.JesusA.surface-max-h", 0.36);
+        double margin = plugin.getConfig().getDouble("checks.JesusA.margin", 0.03);
+        int streakToFlag = plugin.getConfig().getInt("checks.JesusA.streak-to-flag", 3);
+        double addVl = plugin.getConfig().getDouble("checks.JesusA.add-vl", 1.0);
+
+        // грубо: если ноги в воде — лимит ниже; если плывём по поверхности — лимит повыше
+        Material feet = p.getLocation().getBlock().getType();
+        double allowed = (feet == Material.WATER || feet == Material.LAVA) ? swimMax : surfaceMax;
+
+        if (horiz > (allowed + margin)) {
+            // используем speedStreak как общий счётчик для простоты (или заведи отдельный)
+            if (++pd.speedStreak >= streakToFlag) {
+                flag(p, "JesusA", addVl, "h=%.3f > %.3f".formatted(horiz, allowed));
+                pd.speedStreak = streakToFlag;
+            }
+        }
+    }
+
+    private void flag(Player p, String check, double addVl, String debug) {
+        vl.add(p.getUniqueId(), check, addVl, debug);
+        vl.maybePunish(p.getUniqueId(), check); // автокик по порогу чека (если настроено)
     }
 
     private boolean isExempt(Player p) {
@@ -122,5 +255,14 @@ public class MovementListener implements Listener {
     private boolean isInLiquid(Player p) {
         Material t = p.getLocation().getBlock().getType();
         return t == Material.WATER || t == Material.LAVA || t == Material.KELP || t == Material.KELP_PLANT;
+    }
+
+    private boolean isLandingExempt(Player p) {
+        // легальные мягкие приземления
+        Material below = p.getLocation().clone().subtract(0, 1, 0).getBlock().getType();
+        if (below == Material.SLIME_BLOCK || below == Material.HONEY_BLOCK || below == Material.HAY_BLOCK) return true;
+        if (isInLiquid(p)) return true;
+        if (p.hasPotionEffect(PotionEffectType.SLOW_FALLING)) return true;
+        return false;
     }
 }
